@@ -1878,7 +1878,7 @@ sub positionNearPortal {
 sub printItemDesc {
 	my $itemID = shift;
 	my $itemName = itemNameSimple($itemID);
-	my $description = $itemsDesc_lut{$itemID} || 'Error: No description availible.';
+	my $description = $itemsDesc_lut{$itemID} || 'Error: No description availible.\n';
 	message("===============Item Description===============\n", "info");
 	message("Item: $itemName\n\n", "info");
 	message($description, "info");
